Fixed th font size too big

--- a/app/assets/stylesheets/main_sheet_tab.css.scss
+++ b/app/assets/stylesheets/main_sheet_tab.css.scss
@@ -113,6 +113,7 @@
       }
 
       th {
+        font-size: smaller;
         color: #666666;
       }
     }
